# jotstash

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  config.toml.example
.github/workflows/: ci.yml
src/: ai.rs  app.rs  buffer.rs  commands.rs  config.rs  date.rs  index.rs  main.rs  parser.rs  persistence.rs  spans.rs  spell.rs  state.rs  sync.rs
