[package]
name = "jotstash"
version = "0.1.0"
edition = "2021"
description = "Terminal-based, plain-text journal app with Markdown highlighting, AI polish, spell check, and GitHub sync."
license = "MIT"
repository = "https://github.com/m0mus/jotstash"
readme = "README.md"
keywords = ["notes", "tui", "markdown", "git", "ai"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "jot"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
dirs = "5"
ratatui = { version = "0.28", features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symspell = "0.4"
toml = "0.8"
unicode-width = "0.1"
